Corrected typos and fixed layout of gc dataset nb model

--- a/analysis.tex
+++ b/analysis.tex
@@ -1,5 +1,6 @@
 \chapter{Analisi}
 
+\normalsize
 In questo capitolo verranno analizzati i risultati dell'esperimento, ottenuti utilizzando un plugin di Microsoft Excel, \textbf{XLSTAT}. La configurazione ha riguardato i valori ottenuti sui quattro dataset dai tre algoritmi di interesse: \nameref{ch:bayes}, \nameref{ch:reptree} e \nameref{ch:jrip}.
 
 \section{Test}
@@ -12,7 +13,7 @@ Per confrontare gli algoritmi è necessario definire due ipotesi, quella nulla $
 \end{itemize}
 
 \noindent
-Inoltre bisogna fare attenzione a scegliere lo strumento statistico adeguato, tenendo in conto alcuni aspetti:
+Inoltre bisogna fare attenzione a scegliere lo strumento statistico adeguato, tenendo conto di alcuni aspetti:
 \begin{itemize}
 	\item Non possono essere fatte considerazioni sul tipo di distribuzione che i dati assumono.
 	\item È necessario uno test che vada bene per più di due algoritmi.
