--- a/data_description.tex
+++ b/data_description.tex
@@ -1,7 +1,7 @@
 \chapter{Descrizione dei dati}
 \label{ch:data}
 
-Di seguito vengono descritti i 4 dataset utilizzati nella sperimentazione
+Di seguito vengono descritti i 4 dataset utilizzati nella .
 
 \section{German Credit dataset}
 Il dataset contiene informazioni in ambito finanziaro su clienti ritenuti a rischio o meno.
