--- a/execution.tex
+++ b/execution.tex
@@ -10,8 +10,9 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 	\footnotesize\verbatiminput{results/nb/german_credit.nb}
 \end{mdframed}
 
-\LTXtable{1.4\linewidth}{results/nb/german_credit.nbc}
-
+\newgeometry{margin=1cm}
+\LTXtable{\textwidth}{results/nb/german_credit.nbc}
+\restoregeometry
 
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\footnotesize\verbatiminput{results/reptree/german_credit.reptree}
