Fixed margins, removed pointless packages and commands

--- a/execution.tex
+++ b/execution.tex
@@ -10,9 +10,9 @@ Qui vengono confrontati i due algoritmi REPTree e RIPPER/JRip. Entrambi hanno sf
 	\footnotesize\verbatiminput{results/nb/german_credit.nb}
 \end{mdframed}
 
-\newgeometry{margin=1cm}
-\LTXtable{\textwidth}{results/nb/german_credit.nbc}
-\restoregeometry
+
+\input{results/nb/german_credit.nbc}
+
 
 \begin{mdframed}[frametitle=Esecuzione REPTree]
 	\footnotesize\verbatiminput{results/reptree/german_credit.reptree}
