--- a/analysis.tex
+++ b/analysis.tex
@@ -1,7 +1,7 @@
 \chapter{Analisi}
 
 \normalsize
-In questo capitolo verranno analizzati i risultati dell'esperimento, ottenuti utilizzando un plugin di Microsoft Excel, \textbf{XLSTAT}. La configurazione ha riguardato i valori ottenuti sui quattro dataset dai tre algoritmi di interesse: \nameref{ch:bayes}, \nameref{ch:reptree} e \nameref{ch:jrip}.
+In questo capitolo verranno analizzati i risultati dell'esperimento, utilizzando un plugin di Microsoft Excel, \textbf{XLSTAT}. La configurazione ha riguardato i valori ottenuti sui quattro dataset dai tre algoritmi di interesse: \nameref{ch:bayes}, \nameref{ch:reptree} e \nameref{ch:jrip}.
 
 \section{Test}
 
